Closed Bug 280731 Opened 21 years ago Closed 21 years ago

nsIProtocolProxyService::NewProxyInfo is broken

Categories

(Core :: Networking, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla1.8beta1

People

(Reporter: darin.moz, Assigned: darin.moz)

Details

(Keywords: regression)

Attachments

(1 file)

nsIProtocolProxyService::NewProxyInfo is broken The line: "if (aType.LowerCaseEqualsASCII(types[i]) == 0) {" is plainly wrong. This was introduced by carelessly translating code that used PL_strcasecmp previously. My bad! :-( Fortunately, this bug doesn't affect Firefox 1.0 or Mozilla 1.7.
Attached patch v1 patchSplinter Review
Attachment #173136 - Flags: superreview?(bzbarsky)
Attachment #173136 - Flags: review?(bzbarsky)
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.8beta
Comment on attachment 173136 [details] [diff] [review] v1 patch r+sr=bzbarsky
Attachment #173136 - Flags: superreview?(bzbarsky)
Attachment #173136 - Flags: superreview+
Attachment #173136 - Flags: review?(bzbarsky)
Attachment #173136 - Flags: review+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
V/lxr. 1.61 darin%meer.net 2005-02-01 22:34 fixes bug 280731 "nsIProtocolProxyService::NewProxyInfo is broken" r+sr=bzbarsky
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: