fixes bug 280731 "nsIProtocolProxyService::NewProxyInfo is broken" r+sr=bzbarsky